--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=demo
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
+# TencentDB configuration
 spring.datasource.url=jdbc:mysql://gz-cdb-2qb8ctqn.sql.tencentcdb.com:21694/InnovativeTest?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=It010203
