--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=demo
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 # TencentDB configuration
-spring.datasource.url=jdbc:mysql://gz-cdb-2qb8ctqn.sql.tencentcdb.com:21694/InnovativeTest?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://gz-cdb-2qb8ctqn.sql.tencentcdb.com:21694/InnovativeTest?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=It010203
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
