add azure blob services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 
+# blob storage configuration
+#azure.storage.connection-string=0
+#azure.storage.container-name=0
+spring.servlet.multipart.max-file-size=10MB
+
