--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # blob storage configuration
 #azure.storage.connection-string=0
-#azure.storage.container-name=0
+#azure.storage.container-name=webform
 spring.servlet.multipart.max-file-size=10MB
 
