--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.application.name=demo
 # TencentDB configuration
 spring.datasource.url=jdbc:mysql://gz-cdb-2qb8ctqn.sql.tencentcdb.com:21694/InnovativeTest?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=It010203
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -23,7 +23,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # blob storage configuration
-#azure.storage.connection-string=0
-#azure.storage.container-name=webform
+azure.storage.connection-string=${AZURE_BLOB_CONNECTION_STRING}
+azure.storage.container-name=webform
 spring.servlet.multipart.max-file-size=10MB
 
