--- a/.github/workflows/main_innoform.yml
+++ b/.github/workflows/main_innoform.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        env:
+          AZURE_BLOB_CONNECTION_STRING: ${{ secrets.AZURE_BLOB_CONNECTION_STRING }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -59,6 +61,4 @@ jobs:
           app-name: 'InnoForm'
           slot-name: 'Production'
           package: '*.jar'
-          environment-variables: |
-            AZURE_BLOB_CONNECTION_STRING=${{ secrets.AZURE_BLOB_CONNECTION_STRING }}
           
